# streaming

./: .gitignore  LICENSE  README.md  pyproject.toml
src/stream/: adapter.py  dataset.py  feedback.py  judge.py  language.py  main.py  project.py
src/stream/language/: generate.py  instrument.py  pm.py  template.py  utils.py
src/stream/language/completed/: pm.py  python.py
src/stream/language/template/: instrument.py  pm.py
tests/: test_template.py  test_write_cases.py
