[project]
name = "stream"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dspy>=3.0.4",
    "pytest>=9.0.2",
]

[tool.uv.sources]
dspy = { git = "https://github.com/stanfordnlp/dspy.git" }

[tool.ruff]
extend-exclude = ["output/*.py"]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
